feat: adding find all with username param
